# isoxml-py

./: .gitignore  README.md  pyproject.toml
docs/: ISOXML_quirks.md
examples/: README.md  app_map_grid_type_1.py  app_map_grid_type_2.py  app_map_raster.py  app_map_vector.py  grid_type_1_export.py  grid_type_2_export.py  guidance_pattern.py  guidance_pattern_viewer.ipynb  partfield_viewer.ipynb  pathfield_export.py  pycode_generator.py  task_validataion.py
examples/input/: app_map_vector.geojson
isoxml/converter/: binary_log.py  np_grid.py  np_grid__test.py  shapely_geom.py
isoxml/data/: ddi_entities.json
isoxml/models/: README.md  ddi_entities.py  refactor_helper.py  refactor_package.py
isoxml/models/base/v3/: __init__.py  allocation_stamp.py  coded_comment.py  coded_comment_group.py  colour_legend.py  colour_range.py  comment_allocation.py  crop_type.py  crop_variety.py  cultural_practice.py  customer.py  data_log_value.py  device.py  device_allocation.py  device_element.py  device_process_data.py  external_file_contents.py  external_file_reference.py  grid.py  iso11783_task_data.py  line_string.py  operation_technique_reference.py  partfield.py  point.py  polygon.py  position.py  process_data_variable.py  product.py  product_allocation.py  product_group.py  task.py  time.py  treatment_zone.py  value_presentation.py  worker.py  worker_allocation.py
isoxml/models/base/v4/: __init__.py  allocation_stamp.py  attached_file.py  base_station.py  coded_comment.py  coded_comment_list_value.py  colour_legend.py  comment_allocation.py  connection.py  control_assignment.py  crop_type.py  crop_variety.py  cultural_practice.py  customer.py  data_log_trigger.py  device.py  device_allocation.py  device_element.py  device_object_reference.py  device_process_data.py  device_property.py  device_value_presentation.py  external_file_contents.py  external_file_reference.py  farm.py  grid.py  guidance_allocation.py  guidance_group.py  guidance_pattern.py  guidance_shift.py  iso11783_link_list.py  iso11783_task_data.py  line_string.py  link.py  link_group.py  oper_tech_practice.py  operation_technique.py  partfield.py  point.py  polygon.py  (+13 more)
isoxml/util/: external_file.py  isoxml_io.py  isoxml_io_test.py
resources/: resources.py
resources/ddi_update/: ddi_entities_updater.py
resources/xsd/: README.md
test/converter/: binary_log__test.py  np_grid__test.py  shapely_geom__test.py
test/models/: ddi_entities_test.py  task_data_v4_test.py
test/models/v3/: task_data_v3_test.py
test/resources/isoxml/v3/onesoil_demo/: TASKDATA.XML  info.md
test/resources/isoxml/v4/cnh_export/: TASKDATA 1.XML  info.md
test/resources/isoxml/v4/deutz_export/: CPC00000.XML  CTP00000.XML  DVC00000.XML  FRM00000.XML  LINKLIST.XML  OTQ00000.XML  PDT00000.XML  PFD00000.XML  PGP00000.XML  TASKDATA.XML  TCC00000.XML  TSK00000.XML  VPN00000.XML  info.md
test/resources/isoxml/v4/farmdoc/: info.md
test/util/: external_file_test.py  isoxml_io_test.py
tests/models/v3/: task_data_v3_test.py
tests/models/v4/: task_data_v4_test.py
tests/resources/: test_resources.py
(+32 files in other folders)
