[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"


[project]
name = "isoxml"
version = "0.0.1"
description = "Python ISOXML read/write"
license = {text = "Apache License 2.0"}
authors = [
  { name="Josephinum-Research" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["isoxml", "isobus", "iso", "11783-10", "xml"]

dependencies = [
    "xsdata == 24.7",
    "numpy == 1.26.4",
    "rasterio == 1.3.10",
    "shapely == 2.0.5",
    "typing_extensions == 4.12.2",
]

[project.urls]
Homepage = "https://github.com/Josephinum-Research/isoxml-py"
Issues = "https://github.com/Josephinum-Research/isoxml-py/issues"

[project.optional-dependencies]
dev = [
    "xsdata[cli]"
]
test = [
    "pytest",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["isoxml*"]
exclude = ["examples"]
namespaces = false

